--- a/src/styles/sections/_placeholders.scss
+++ b/src/styles/sections/_placeholders.scss
@@ -1,12 +1,17 @@
 // page header placeholder
 #placeholder__page-header {
 	display: flex;
-	justify-content: space-between;
+	flex-direction: column-reverse;
+	justify-content: center;
 	align-items: center;
 	margin: 0 $m-size;
+	@media (min-width: $mobile-breakpt) {
+		flex-direction: row;
+		justify-content: space-between;
+	}
 	.placeholder__line {
 		display: inline-block;
-		width: 10rem;
+		width: 12rem;
 		@media (min-width: $sm-mobile-breakpt) {
 			width: 15rem;
 		}
@@ -20,6 +25,7 @@
 		width: $xl-size;
 		border-radius: 50%;
 		overflow: hidden;
+		margin-bottom: 1rem;
 		@media (min-width: $sm-mobile-breakpt) {
 			width: $xxl-size;
 			height: $xxl-size;
